Logic implementation, frontend changes

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -4,3 +4,10 @@
   align-items: center;
   min-height: 100vh;
 }
+
+button {
+  margin: .25em;
+  padding: 1.5em;
+  line-height: 1;
+  height: auto;
+}
